Bug 342011, xul window load event handlers no longer called with evt.eventPhase == Event.AT_TARGET, r+sr=sicking